<resources>
    <string name="app_name">VHN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="tamil">Tamil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="name_of_the_person">Name of the Person</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="vhn_name">VHN Name</string>
    <string name="distance_of_the_vhn_from_picme_user">Distance of the VHN from Picme User</string>
    <string name="address">Address</string>
    <string-array name="array_mothers_list">
        <item>--Select--</item>
        <item>AN Mothers</item>
        <item>Village Wise</item>
        <item>Trimester</item>
        <item>Dose AN TT</item>
        <item>EDD Mothers</item>
    </string-array>
    <string-array name="array_trimester">
        <item>--Select--</item>
        <item>Trimester 1</item>
        <item>Trimester 2</item>
        <item>Trimester 3</item>
    </string-array>
    <string-array name="array_village_list">
        <item>--Select Village--</item>
        <item>Village 1</item>
        <item>Village 2</item>
        <item>Village 3</item>
        <item>Village 4</item>
        <item>Village 5</item>
    </string-array>
    <string-array name="array_dose_list">
        <item>All</item>
        <item>Dose 1 (Day 45)</item>
        <item>Dose 2 (Day 75)</item>
        <item>Dose 3 (Day 105)</item>
        <item>Dose 4 (Day 270)</item>
    </string-array>
    <string-array name="array_pn_hbnc_visit">

        <item>--Select--</item>
        <item>Visit 1 (Day 0)</item>
        <item>Visit 2 (Day 3)</item>
        <item>Visit 3 (Day 7)</item>
        <item>Visit 4 (Day 14)</item>
        <item>Visit 5 (Day 21)</item>
        <item>Visit 6 (Day 28)</item>
        <item>Visit 7 (Day 42)</item>

    </string-array>
    <string-array name="array_picme_list">
        <item>--Select Picme Id--</item>
        <item>1001</item>
        <item>1002</item>
        <item>1003</item>
        <item>1004</item>
        <item>1005</item>
    </string-array>
    <string name="title_activity_clinical_report">ClinicalReportActivity</string>
    <string name="google_maps_key">AIzaSyCnzEjpN8svPol7UhuEf-3XBQt4kC-dkOA</string>
    <string name="post_natal_mother_visit">Post Natal Mother Visit</string>
    <string name="post_natal">Post Natal</string>
    <string name="any_complient">Any Complaints</string>
    <string name="pulse_rate">Pulse rate</string>
    <string name="epistomy">Epistomy / Tear suture</string>
    <string name="pv_discharge">PV discharge</string>
    <string name="breast_examinatione">Breast Examination</string>
    <string name="nipple_examination">Nipple Examination</string>
    <string-array name="array_pvdischarge">
        <item>--Select--</item>
        <item>Normal</item>
        <item>heavy bleeding</item>
        <item>Foul smelling</item>
    </string-array>
    <string-array name="array_post_natal_breast_feeding_no_reasons">
        <item>--Select--</item>
        <item>Baby dead</item>
        <item>No milk produced</item>
        <item>Milk amount not enough</item>
        <item>Breast problem</item>
    </string-array>
    <string-array name="array_breast_examinatione">
        <item>--Select--</item>
        <item>Normal</item>
        <item>Engorgement</item>
        <item>Skin redness</item>
        <item>Pain full</item>
    </string-array>
    <string-array name="array_nipple_examination">
        <item>--Select--</item>
        <item>Normal</item>
        <item>Inverted</item>
        <item>Cracked</item>
    </string-array>
    <string name="due_date">Due Date</string>
    <string name="place">Place</string>
    <string name="care_provided_date">Care Provided Date</string>
    <string name="weight">Weight</string>
    <string name="temp">Temp</string>
    <string name="exclusive_breast_feeding">Breast Feeding</string>
    <string name="exclusive_breast_feeding_no_reasons">Reasons</string>
    <string name="outcome">Out Come</string>
    <string name="diagnosis_in">Diagnosis</string>
    <string name="submit">Submit</string>
    <string name="immunization">Immunization</string>
    <string name="provided_date">Provided Date</string>
    <string name="vaccine_received">Vaccine Received :</string>
    <string name="opv">OPV</string>
    <string name="pentavalent">Pentavalent</string>
    <string name="rota">Rota</string>
    <string name="ipv">IPV</string>
    <string name="mr">MR</string>
    <string name="je">JE</string>
    <string name="logo">logo</string>
    <string-array name="array_immunization">
        <item>--Select--</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be
        started.
    </string>
    <string name="settings">settings</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="btn_label_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="title_activity_all_moter_list">AllMoterListActivity</string>
    <string name="mother_s_information">Mother\'s Information</string>
    <string name="view_location">View Location</string>
    <string name="view_report">View Report</string>
    <string name="an_view_report">AN Report</string>
    <string name="pn_view_report">PN Report</string>
    <string name="picme_id">PICME Id</string>
    <string name="age">Age</string>
    <string name="present_status">AN care</string>
    <string name="date_of_delivery">Date of Delivery</string>
    <string name="time_of_delivery">Time of Delivery</string>
    <string name="maturity">Maturity</string>
    <string name="after_delivery">PN Care</string>
    <string name="high_risk">HIGH RISK</string>
    <string name="birth_weight">Birth weight</string>
    <string name="type_of_delivery">Type of Delivery</string>
    <string name="gest_age">Gest Age</string>
    <string name="lmp_date">LMP Date</string>
    <string name="edd_date">EDD Date</string>
    <string name="husband">Husband</string>
    <string name="mother">Mother</string>
    <string name="no_recordes_found">NO RECORDES FOUND</string>
    <string name="picme_visit">Picme Visit</string>
    <string name="other_visit">Other Visit</string>
    <string name="primary_records">PRIMARY RECORDS</string>
    <string name="view_reports">View Reports</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="vhncode">Enter Vhn Code</string>
    <string name="mobilenumber">Enter Mobile Number</string>
    <string name="conform_password">Conform Password</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="delivery_outcome">Delivery Outcome</string>
    <string name="new_born">New Born</string>
    <string name="infant_details">Infant Details</string>
    <string name="height">Height</string>
    <string name="infant_id">Infant Id</string>
    <string name="birth_type">Birth Type</string>
    <string name="breast_fedding_given">Breast Fedding Given</string>
    <string name="admitted_in_sncu">Admitted in SNCU</string>
    <string name="new_born_screening_at_birth">New Born Screening at Birth</string>
    <string name="zero_dose">Zero Dose</string>
    <string name="bcg_given_date">BCG Given Date</string>
    <string name="opv_given_date">OPV Given Date</string>
    <string name="hep_b_given_date">Hep B given date</string>
    <string name="risk_status">Risk Status</string>
    <string name="dose_list">Dose List</string>
    <string name="immunization_list">Immunization List</string>
    <string name="infant_list">Infant LIST</string>
    <string name="alert_list">Alert LIST</string>
    <string name="visit_list">Visit LIST</string>
    <string name="vhnid">VhnId</string>
    <string name="thaimai_app_ism_t_available_on_this_device">Thaimai App ism\'t available on this device.</string>
    <string name="mother_migration_list">Mother Migration List</string>
    <string name="mother_s_list">Mother\'s List</string>
    <string name="you_are_in_offline">You are in offline</string>
    <string name="mother_report">Mother Report</string>
    <string name="next_visit">Next Visit</string>
    <string name="filter">Filter</string>
    <string name="terms_list">Terms LIST</string>
    <string name="notification_list">Notification List</string>
    <string name="visit_reports">Visit Reports</string>
    <string name="an_tt_1_due_s_list">AN TT 1 Due\'s LIST</string>
    <string name="an_tt_2_due_s_list">AN TT 2 Due\'s LIST</string>
    <string name="call_now">Call Now</string>
    <string name="primary_registration">Primary Registration</string>
    <string name="name">Name</string>
    <string name="primary_mobile_number">Primary mobile number</string>
    <string name="alternative_mobile_number">Alternative mobile number</string>
    <string name="occupation">Occupation</string>
    <string name="husband_s_occupation">Husband\'s Occupation</string>
    <string name="age_at_marriage">Age at marriage</string>
    <string name="consanguineous_marraige">Consanguineous marriage</string>
    <string name="history_of_any_illness">History of any illness</string>
    <string name="history_of_family_illness">History of family illness</string>
    <string name="any_surgery_done_before">Any Surgery done before</string>
    <string name="does_use">Does use</string>
    <string name="tobacco">Tobacco</string>
    <string name="alcohol">Alcohol</string>
    <string name="on_any_medication">On any medication</string>
    <string name="allergic_to_any_drugs">Allergic to any drugs</string>
    <string name="history_of_previous_pregnancy">History of previous pregnancy</string>
    <string name="lscs_done">LSCS done</string>
    <string name="any_complications_during_pregnancy">Any complications during pregnancy</string>
    <string name="present_pregnancy">Present pregnancy</string>
    <string name="g">G</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="l">L</string>
    <string name="registration_week">Registration week</string>
    <string name="no_internet">No Internet</string>
</resources>